WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159517
Crash due to HTMLMediaElement at JavaScriptCore: JSC::JSLockHolder::JSLockHolder
https://bugs.webkit.org/show_bug.cgi?id=159517
Summary
Crash due to HTMLMediaElement at JavaScriptCore: JSC::JSLockHolder::JSLockHolder
Jer Noble
Reported
2016-07-07 11:06:36 PDT
Crash due to HTMLMediaElement at JavaScriptCore: JSC::JSLockHolder::JSLockHolder
Attachments
Patch
(2.01 KB, patch)
2016-07-07 11:17 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-07-07 11:12:59 PDT
<
rdar://problem/27221109
>
Jer Noble
Comment 2
2016-07-07 11:17:52 PDT
Created
attachment 283028
[details]
Patch
WebKit Commit Bot
Comment 3
2016-07-07 11:53:57 PDT
Comment on
attachment 283028
[details]
Patch Clearing flags on attachment: 283028 Committed
r202923
: <
http://trac.webkit.org/changeset/202923
>
WebKit Commit Bot
Comment 4
2016-07-07 11:54:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug